<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CamChooserFragment"
    android:background="@drawable/bg_home">

    <androidx.cardview.widget.CardView
        android:id="@+id/cd_forname"
        android:layout_width="308dp"
        android:layout_height="231dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:backgroundTint="@color/pinK_100"
        android:contentDescription="bingung"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.450">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo_disini"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center|top"
                android:layout_marginTop="5dp"
                android:src="@drawable/horizontal_logo">
            </ImageView>

            <TextView
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/capriola_regular"
                android:text="@string/pertanyaan"
                android:textAlignment="center"
                android:textSize="15sp"/>

            <Button
                android:id="@+id/btn_klasifikasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/capriola_regular"
                android:text="@string/klasifikasi_btn"/>

            <Button
                android:id="@+id/btn_freshness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/capriola_regular"
                android:text="@string/kesegaran_btn"/>

        </LinearLayout>




    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>