<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="7dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="7dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="20dp"
    card_view:cardElevation="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="350dp"
        android:layout_height="190dp"
        android:background="@drawable/shape"
        android:padding="8dp">

        <ImageView
            android:id="@+id/item_avatar"
            android:layout_width="320dp"
            android:layout_height="130dp"
            android:contentDescription="@string/img_artikel"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.533"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.08"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/article_title"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/item_avatar"
            android:textColor="@color/dark_red"
            android:fontFamily="@font/capriola_regular"
            android:textSize="12sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.5"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/item_avatar"
            card_view:layout_constraintVertical_bias="0.243"
            tools:text="@string/article_title" />

        <TextView
            android:id="@+id/read_more"
            android:layout_width="320dp"
            android:layout_height="20dp"
            android:layout_toEndOf="@id/item_avatar"
            android:fontFamily="@font/capriola_regular"
            android:gravity="center_vertical"
            android:textColor="@color/dark_red"
            android:textSize="12sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/article_title"
            card_view:layout_constraintVertical_bias="0.0"
            tools:text="@string/read_more" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
