<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_third_splash">

    <Button
        android:id="@+id/button_skip_third_splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/capriola_regular"
        android:padding="0dp"
        android:text="@string/skip_button"
        android:textColor="@color/dark_red"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.11"
        app:layout_constraintStart_toEndOf="@+id/image2_third_splash"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <ImageView
        android:id="@+id/image_third_splash"
        android:layout_width="234dp"
        android:layout_height="228dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.199"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.337"
        app:srcCompat="@drawable/image_third_splash" />

    <TextView
        android:id="@+id/text1_third_splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/capriola_regular"
        android:text="@string/text1_third_splash"
        android:textColor="@color/dark_red"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="@+id/image_third_splash"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/image_third_splash"
        app:layout_constraintTop_toBottomOf="@+id/image_third_splash" />

    <TextView
        android:id="@+id/text2_third_splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/capriola_regular"
        android:text="@string/text2_third_splash"
        android:textColor="@color/dark_red"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/text1_third_splash"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text1_third_splash"
        app:layout_constraintTop_toBottomOf="@+id/text1_third_splash" />

    <ImageView
        android:id="@+id/dot_third_splash"
        android:layout_width="55dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/text2_third_splash"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text2_third_splash"
        app:layout_constraintTop_toBottomOf="@+id/text3_third_splash"
        app:srcCompat="@drawable/dot_third_splash" />

    <ImageView
        android:id="@+id/image2_third_splash"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="@+id/image_third_splash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="@+id/image_third_splash"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24"
        app:srcCompat="@drawable/image2_third_splash" />

    <TextView
        android:id="@+id/text3_third_splash"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/capriola_regular"
        android:text="@string/text3_third_splash"
        android:textColor="@color/dark_red"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="@+id/text2_third_splash"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text2_third_splash"
        app:layout_constraintTop_toBottomOf="@+id/text2_third_splash" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toEndOf="@+id/dot_third_splash"
        app:layout_constraintTop_toTopOf="@+id/dot_third_splash"
        app:layout_constraintVertical_bias="0.5"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/button_next" />

</androidx.constraintlayout.widget.ConstraintLayout>