<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="245dp"
    android:layout_height="380dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_input_username"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_input_text"
        app:boxBackgroundMode="none"
        android:textColorHint="@color/baby_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/capriola_regular"
            android:hint="@string/input_username"
            android:singleLine="true"
            android:textColor="@color/dark_red"
            android:textColorHint="@color/baby_red"
            android:textSize="13sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_input_email"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColorHint="@color/baby_red"
        android:layout_marginBottom="288dp"
        android:background="@drawable/shape_input_text"
        app:boxBackgroundMode="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/layout_input_username"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/layout_input_username"
        app:layout_constraintTop_toBottomOf="@+id/layout_input_username"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/capriola_regular"
            android:hint="@string/input_email"
            android:singleLine="true"
            android:textColor="@color/dark_red"
            android:textColorHint="@color/baby_red"
            android:textSize="13sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_input_password_signup"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_input_text"
        android:textColorHint="@color/baby_red"
        app:boxBackgroundMode="none"
        app:layout_constraintEnd_toEndOf="@+id/layout_input_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/layout_input_email"
        app:layout_constraintTop_toBottomOf="@+id/layout_input_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_passwordSignUp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/capriola_regular"
            android:hint="@string/input_password"
            android:singleLine="true"
            android:textColor="@color/dark_red"
            android:textSize="13sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/showHidePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/layout_input_password_signup"
        app:layout_constraintEnd_toEndOf="@+id/layout_input_password_signup"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="@+id/layout_input_password_signup"
        app:layout_constraintTop_toBottomOf="@+id/layout_input_email"
        app:layout_constraintVertical_bias="0.7"
        app:srcCompat="@drawable/ic_eye_open" />

    <Button
        android:id="@+id/button_signup"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:elevation="8dp"
        android:fontFamily="@font/capriola_regular"
        android:text="@string/daftar"
        android:textSize="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/layout_input_username"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/layout_input_username"
        app:layout_constraintTop_toBottomOf="@+id/layout_input_password_signup"
        app:layout_constraintVertical_bias="0.462" />

</androidx.constraintlayout.widget.ConstraintLayout>